Closed
Bug 17103
Opened 26 years ago
Closed 26 years ago
[BETA] Using Russian Detector and visiting the URL leads to a crash
Categories
(Core :: Internationalization, defect, P3)
Tracking
()
VERIFIED
FIXED
M13
People
(Reporter: momoi, Assigned: ftang)
References
()
Details
(Whiteboard: fix in local code.)
** Observed with 10/22/99 Win32 M11 build (1999102208)**
Start Mozilla, turn on Russian detector and go visit the
above URL. Mozilla then crashes. I have Talkback incident report
but the Cyclone server is not working well enough to retrieve the
data yet.
The above URL is an ordinary Win-1251 test page containing
no Meta tag or HTTP charset from server.
(** I saw the same crash with the M10 release build though
Paul Gorodyansky says that he coudl load it with M10.)
| Assignee | ||
Updated•26 years ago
|
Status: NEW → ASSIGNED
Target Milestone: M16
| Assignee | ||
Comment 1•26 years ago
|
||
Mark it as M14- We should either take out this Russian/Ukrainian detectors or
fix the problem by beta.
| Assignee | ||
Updated•26 years ago
|
Target Milestone: M16 → M14
Updated•26 years ago
|
Severity: major → critical
| Reporter | ||
Updated•26 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → WORKSFORME
| Reporter | ||
Comment 3•26 years ago
|
||
Talkback database was wiped off clean recently. So there is no
longer the report I sent. But good news. This crash no longer occurs
with 11/30/99 Win32 build.
I'm going to mark this resolved/worksforme.
| Reporter | ||
Updated•26 years ago
|
Status: RESOLVED → REOPENED
| Reporter | ||
Comment 4•26 years ago
|
||
I'm going to re-open this bug because a crash can be
reproduced by changing the steps a bit.
1. Start up Mozilla browser.
2. Acesss the test page.
3. Turn on the Russian Auto-Detector --> it crashes.
If you reverse the steps 2 and 3, it does not crash.
Updated•26 years ago
|
Resolution: WORKSFORME → ---
Comment 5•26 years ago
|
||
Clearing WorksForme..
| Reporter | ||
Comment 6•26 years ago
|
||
Here's the Talkback report on the crash today:
+++++++++++++++++++++++++++++
Trigger Type: Program Crash
Trigger Reason: Access violation
Call Stack: (Signature = nsCyrillicDetector::HandleData 9c233e4f)
nsCyrillicDetector::HandleData
[d:\builds\seamonkey\mozilla\intl\chardet\src\nsCyrillicDetector.cpp, line 112]
nsCyrXPCOMDetector::DoIt
[d:\builds\seamonkey\mozilla\intl\chardet\src\nsCyrillicDetector.cpp, line 194]
nsDetectionAdaptor::RawBuffer
[d:\builds\seamonkey\mozilla\intl\chardet\src\nsDetectionAdaptor.cpp, line 223]
nsParser::OnStopRequest
[d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp, line 1333]
nsChannelListener::Init
[d:\builds\seamonkey\mozilla\webshell\src\nsDocLoader.cpp, line 1476]
nsWebShell::CreatePluginHost
[d:\builds\seamonkey\mozilla\webshell\src\nsWebShell.cpp, line 597]
nsHTTPResponseListener::ParseStatusLine
[d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHTTPResponseListener.cp
p, line 459]
nsInputStreamChannel::AsyncOpen
[d:\builds\seamonkey\mozilla\netwerk\base\src\nsInputStreamChannel.cpp, line
169]
nsUnicharStreamLoader::GetNumCharsRead
[d:\builds\seamonkey\mozilla\netwerk\base\src\nsUnicharStreamLoader.cpp, line
124]
PL_HandleEvent
[plevent.c, line 538]
_md_EventReceiverProc
[plevent.c, line 976]
KERNEL32.DLL + 0x363b (0xbff7363b)
0x06e30016
+++++++++++++++++++++++++++++++++++++++++++
Summary: Using Russian Detector and visiting the URL leads to a crash → [BETA] Using Russian Detector and visiting the URL leads to a crash
Whiteboard: [HELP WANTED]
As Frank stated earlier, for Beta, either fix the crash or remove the
Russian auto-detect feature (users still could select specific Russian charset
encodings.
| Assignee | ||
Updated•26 years ago
|
Status: REOPENED → ASSIGNED
Whiteboard: [HELP WANTED] → fix in local code.
| Assignee | ||
Comment 9•26 years ago
|
||
find out the problem. Read/write accros array boundary. Have fix in local code.
Currenty code may cause crash.
| Assignee | ||
Comment 10•26 years ago
|
||
*** Bug 17094 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•26 years ago
|
Target Milestone: M14 → M13
| Assignee | ||
Updated•26 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 26 years ago → 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 11•26 years ago
|
||
add if condicition so we won't access the 128 size character class array when
high bit is off.
Comment 12•26 years ago
|
||
I verified this in 2000020808 Win32, 2000020809 Linux, and 2000020410 Mac build.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•