fix bug 17103. fix array boundary access problem when get character class array . r=cata a=choffmannnsCyrillic*.cpp